//
// Copyright (C) 2024 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package androidx.test.services.storage;

option java_package = "androidx.test.services.shellexecutor";
option java_outer_classname = 'LocalSocketProtocolProto';

// Message sent from client to server to start a process.
message RunCommandRequest {
  repeated string argv = 1;
  map<string, string> environment = 2;
  int64 timeout_ms = 3;
}

// Multiple responses can be streamed back to the client. The one that has an
// exit code indicates the end of the stream.
message RunCommandResponse {
  bytes buffer = 1;
  int32 exit_code = 2;
}
